--- a/package.json
+++ b/package.json
@@ -11,21 +11,22 @@
   "dependencies": {
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
+    "autoprefixer": "^10.x",
     "bcryptjs": "^3.0.2",
     "crypto-js": "^4.2.0",
     "mongoose": "^8.19.1",
     "next": "15.5.4",
     "next-auth": "^4.24.11",
+    "postcss": "^8.x",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
-    "tailwindcss": "^4.1.14",
-    "postcss": "^8.x",
-    "autoprefixer": "^10.x"
+    "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
